--- a/assets/css/App.css
+++ b/assets/css/App.css
@@ -113,6 +113,7 @@
 }
 .max_w_254 {
   width: 254px;
+  box-shadow: 2px 7px 16px 0px #00000014;
 }
 /* -----------------------------------Buy trending furniture Products--------------------------------- */
 .bg_gray {
