--- a/assets/css/App.css
+++ b/assets/css/App.css
@@ -301,26 +301,20 @@
   animation: bounce 1.2s ease infinite;
 }
 @keyframes bounce {
-  70% {
+  70%,
+  90%,
+  97%,
+  100% {
     transform: translateY(0%);
   }
   80% {
     transform: translateY(-20%);
   }
-  90% {
-    transform: translateY(0%);
-  }
   95% {
     transform: translateY(-11%);
   }
-  97% {
-    transform: translateY(0%);
-  }
   99% {
     transform: translateY(-6%);
-  }
-  100% {
-    transform: translateY(0);
   }
 }
 .opacity_0 {
